--- a/frontend/catalogo-filmes/src/pages/FilmeDetalhe.css
+++ b/frontend/catalogo-filmes/src/pages/FilmeDetalhe.css
@@ -47,17 +47,29 @@
     color: white;
 }
 
-.trailerbtn {
-    width: 130px;
-}
-
 .btn:hover {
     opacity: 0.9;
 }
 
+.trailerbtn {
+    width: 130px;
+}
+
+.botoes-edicao {
+    margin-top: 20px;
+    display: flex;
+    gap: 15px;
+}
+
 .editar {
+    padding: 10px 18px;
+    width: 150px;
     background: #3a6ff7;
-    margin-right: 10px;
+    color: white;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    font-weight: bold;
 }
 
 .editar:hover {
@@ -65,7 +77,14 @@
 }
 
 .deletar {
+    padding: 10px 18px;
+    width: 150px;
     background: #d64040;
+    color: white;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    font-weight: bold;
 }
 
 .deletar:hover {
@@ -124,27 +143,26 @@
     border-radius: 6px;
     cursor: pointer;
 }
-    
+
 @media (max-width: 768px) {
     .detalhes-container {
         flex-direction: column;
         align-items: center;
     }
-    
+
     .detalhe-capa {
         width: 80%;
         height: auto;
     }
 }
-    
+
 @media (max-width: 480px) {
     .detalhes-texto h1 {
         font-size: 22px;
     }
-    
+
     .btn {
         width: 100%;
         margin-top: 6px;
     }
 }
-    
