--- a/frontend/catalogo-filmes/src/components/Header.css
+++ b/frontend/catalogo-filmes/src/components/Header.css
@@ -58,10 +58,11 @@
 
     .nav-menu.open {
         display: flex;
+        align-items: center;
     }
 
     .header-link {
-        width: 100%;
+        width: 90%;
         padding: 12px;
         text-align: center;
     }
