--- a/frontend/catalogo-filmes/src/pages/NovoFilme.css
+++ b/frontend/catalogo-filmes/src/pages/NovoFilme.css
@@ -1,26 +1,26 @@
-
 .modal-overlay {
     position: fixed;
     inset: 0;
-    background: rgba(0, 0, 0, 0.6);
+    background: rgba(0, 0, 0, 0.7);
     display: flex;
     align-items: center;
     justify-content: center;
     z-index: 9999;
+    padding: 10px;
 }
-
 
 .modal {
     background: #111;
     color: white;
     padding: 20px;
-    width: 680px;
-    max-width: 95%;
-    border-radius: 10px;
+    width: 600px;
+    max-width: 100%;
+    max-height: 95vh;
+    overflow-y: auto;
+    border-radius: 12px;
     position: relative;
     box-shadow: 0 10px 40px rgba(0, 0, 0, 0.7);
 }
-
 
 .modal-close {
     position: absolute;
@@ -28,25 +28,23 @@
     top: 12px;
     background: transparent;
     border: none;
-    font-size: 20px;
+    font-size: 26px;
     color: #fff;
     cursor: pointer;
 }
-
 
 .form-modal input,
 .form-modal textarea {
     display: block;
     width: 100%;
-    margin-bottom: 10px;
-    padding: 10px;
+    margin-bottom: 12px;
+    padding: 12px;
     border-radius: 6px;
     border: 1px solid #333;
     background: #0f0f0f;
     color: #fff;
-    font-size: 14px;
+    font-size: 15px;
 }
-
 
 .textarea {
     width: 100%;
@@ -54,22 +52,21 @@
     color: white;
 }
 
-
 .form-modal .btn {
     background: #615e5e;
     border: none;
     color: white;
-    padding: 10px 14px;
+    padding: 12px;
     border-radius: 6px;
     cursor: pointer;
     width: 100%;
     margin-top: 10px;
+    font-weight: bold;
 }
 
 .form-modal .btn:hover {
     background: #504e4e;
 }
-
 
 .form-modal .btn-secundario {
     background: transparent;
@@ -77,10 +74,23 @@
     color: #fff;
 }
 
-
 @media (max-width: 480px) {
     .modal {
-        width: 90%;
         padding: 15px;
+        border-radius: 10px;
+        max-height: 90vh;
+        width: 100%;
+    }
+
+    .modal-close {
+        font-size: 22px;
+        top: 10px;
+        right: 10px;
+    }
+
+    .form-modal input,
+    .form-modal textarea {
+        font-size: 14px;
+        padding: 10px;
     }
 }
