--- a/frontend/catalogo-filmes/src/pages/FilmeDetalhe.css
+++ b/frontend/catalogo-filmes/src/pages/FilmeDetalhe.css
@@ -91,23 +91,27 @@
     background: #b53232;
 }
 
+
 .modal-overlay {
     position: fixed;
     inset: 0;
-    background: rgba(0, 0, 0, 0.6);
+    background: rgba(0, 0, 0, 0.7);
     display: flex;
     align-items: center;
     justify-content: center;
     z-index: 9999;
+    padding: 10px;
 }
 
 .modal {
     background: #111;
     color: white;
     padding: 20px;
-    width: 680px;
-    max-width: 95%;
-    border-radius: 10px;
+    width: 600px;
+    max-width: 100%;
+    max-height: 95vh;
+    overflow-y: auto;
+    border-radius: 12px;
     position: relative;
     box-shadow: 0 10px 40px rgba(0, 0, 0, 0.7);
 }
@@ -118,7 +122,7 @@
     top: 12px;
     background: transparent;
     border: none;
-    font-size: 20px;
+    font-size: 26px;
     color: #fff;
     cursor: pointer;
 }
@@ -127,22 +131,32 @@
 .form-modal textarea {
     display: block;
     width: 100%;
-    margin-bottom: 10px;
-    padding: 8px;
+    margin-bottom: 12px;
+    padding: 12px;
     border-radius: 6px;
     border: 1px solid #333;
     background: #0f0f0f;
     color: #fff;
+    font-size: 15px;
 }
 
 .form-modal .btn {
     background: #615e5e;
     border: none;
     color: white;
-    padding: 10px 14px;
+    padding: 12px;
     border-radius: 6px;
     cursor: pointer;
+    width: 100%;
+    margin-top: 10px;
+    font-weight: bold;
 }
+
+.form-modal .btn:hover {
+    background: #504e4e;
+}
+
+
 
 @media (max-width: 768px) {
     .detalhes-container {
@@ -157,6 +171,7 @@
 }
 
 @media (max-width: 480px) {
+
     .detalhes-texto h1 {
         font-size: 22px;
     }
@@ -164,5 +179,34 @@
     .btn {
         width: 100%;
         margin-top: 6px;
+    }
+
+    .botoes-edicao {
+        flex-direction: column;
+        width: 100%;
+    }
+
+    .editar,
+    .deletar {
+        width: 100%;
+    }
+
+    .modal {
+        padding: 15px;
+        max-height: 90vh;
+        border-radius: 10px;
+        width: 100%;
+    }
+
+    .modal-close {
+        font-size: 22px;
+        top: 10px;
+        right: 10px;
+    }
+
+    .form-modal input,
+    .form-modal textarea {
+        font-size: 14px;
+        padding: 10px;
     }
 }
